<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="site_path">http://e-wit.co.uk/rankify/</string>
    <string name="app_name">Rankify</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">1397650163819409</string>
    <string name="aboutButtonText">ABOUT</string>
    <string name="pullDataButtonText">PULL DATA</string>
    <string name="refreshDataButtonText">REFRESH DATA</string>
    <string name="continueButtonText">CONTINUE</string>
    <string name="finding_friends_label">FINDING FRIENDS</string>
    <string name="sorting_albums_label">SORTING ALBUMS</string>
    <string name="recording_videos_label">RECORDING VIDEOS</string>
    <string name="skimming_statuses_label">SKIMMING STATUSES</string>
    <string name="processing_photos_label">PROCESSING PHOTOS</string>
    <string name="ranking_friends_label">RANKING FRIENDS</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_calculate">Calculate</string>
    <string name="rankifyAboutDes">        Rankify allows you to rank your Facebook friends by gathering the number
        of likes and comments that each friend has given you. Information on the likes and comments is broken
        down over albums, photos, videos, and statuses.</string>
    <string name="title_activity_custom">CustomActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="pre_usersname">Please Login</string>

    <color name="blueButtonColor">#3399FF</color>
    <color name="grayButtonColor">#C0C0C0</color>
    <color name="whiteColor">#FFFFFF</color>

    <string name="title_activity_friend_list">Ranked Friends</string>
    <string name="title_activity_specifics">User\'s Name</string>
	<string name="title_rank">RANK</string>
	<string name="title_total">TOTAL</string>
	<string name="title_likes">LIKES</string>
	<string name="title_comments">COMMENTS</string>
    
	<string name="ad_unit_login">ca-app-pub-5075314472759088/6231073653</string>
	<string name="ad_unit_compute">ca-app-pub-5075314472759088/7707806854</string>
	<string name="ad_unit_specifics">ca-app-pub-5075314472759088/9184540056</string>
	
	<string name="test_device_1">3EC4243996D935975A81EFDA69EB0C3A</string>
	<string name="test_device_2">BD7F56F335692D980B2274D90B7F3B5E</string>
	
	<string name="futura_condensed_extrabold">fonts/futura-condensed-extrabold.ttf</string>
	
	<string name="rankify_website">http://e-wit.co.uk/rankifyapp/index.php</string>
	
</resources>